--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
-.App {
-  text-align: center;
+/* App.css */
+.body {
+  font-family: 'Arial', sans-serif;
+  background-color: #e7f1c8; /* Light gray background */
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+  max-width: 80%;
+  margin: 0 auto;
+  padding: 1%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1 {
+  color: #333333; /* Dark gray text color */
+  
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.card {
+  background-color: #fff; /* White background for cards */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Light shadow effect */
+  transition: transform 0.3s;
 }
 
-.App-link {
-  color: #61dafb;
+.card:hover {
+  transform: scale(1.05); /* Enlarge the card on hover */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card img {
+  width: 100%;
+  height: auto;
+}
+
+.card-title {
+  color: #333; /* Dark gray text color for titles */
+}
+
+.card-subtitle {
+  color: #666; /* Medium gray text color for subtitles */
+}
+
+.card-text {
+  color: #444; /* Slightly darker gray text color for descriptions */
+}
+
+.btn-info {
+  background-color: #3498db; /* Bootstrap's default blue color for info buttons */
+  border: none;
+}
+
+.btn-info:hover {
+  background-color: #2980b9; /* Darker blue on hover */
 }
